--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="publicAddress" content="ak_28xzyNkwV3SbzctMfucZYLb366WuxBvLUKwjCHKBPuwkBUWxDD">
 
   <title>HMS æpp</title>
 
